Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74751

When a signal that passes a QImage is emitted that is connected to a QML function handler it will not clean up the image usage

    XMLWordPrintable

Details

    • 0af154c41dc0dfbf5994e7eb3056b2333b5645b7 (qt/qtdeclarative/5.12)

    Description

      When a signal that passes a QImage is emitted that is connected to a QML function handler it will not clean up the image usage. So it will continue to grow in memory usage unless gc() is called to explicitly clean it up.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes